<resources>
    <string name="app_name">NasaPictures</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="bottom_sheet_header_example">Two Clusters and a Comet</string>
    <string name="bottom_sheet_description_example">This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May.</string>
    <string name="screen_1">На экран 1</string>
    <string name="screen_2">На экран 2</string>
    <string name="settings_name_text">Выбор темы приложения</string>
    <string name="name_of_default_theme">Default Theme</string>
    <string name="name_of_my_custom_theme_blue">Blue Theme</string>
    <string name="name_of_my_custom_theme_red">Red Theme</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="greeting_message">Вас приветствует приложение NasaPictures. Для начала работы нажмите здесь!</string>
    <string name="today_fragment_title">Today Title</string>
    <string name="yesterday_fragment_title">Yesterday Title</string>
    <string name="before_yesterday_fragment_title">Before Yesterday Title</string>
    <string name="recycler_view">Заметки</string>
    <string name="recycler_header">Заметки</string>
</resources>