<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.picture.PictureOfTheDayFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/main_layout_margin_bottom"
            android:paddingStart="@dimen/main_layout_padding_start"
            android:paddingEnd="@dimen/main_layout_padding_end"
            app:layoutDescription="@xml/motion_scene">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_layout_margin_top"
                android:hint="@string/search_wiki"
                app:boxCornerRadiusBottomEnd="@dimen/input_edit_text_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_edit_text_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_edit_text_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/input_edit_text_corner_radius"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/greeting_message"
                style="@style/equilateral_image_view_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_layout_height"
                android:background="?attr/colorSecondary"
                android:contentDescription="@string/greeting_message"
                android:paddingTop="@dimen/greeting_message_padding_top"
                android:text="@string/greeting_message"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/greeting_message_text_size"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                style="@style/equilateral_image_view_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_layout_height"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintTop_toBottomOf="@id/main"
                app:layout_constraintEnd_toStartOf="@id/main"
                app:srcCompat="@drawable/ic_no_photo_vector">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/input_layout"
                    app:tabRippleColor="@color/yellow" />
            </androidx.viewpager.widget.ViewPager>

            <FrameLayout
                android:id="@+id/loadingLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_pager"
                tools:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/bottom_app_bar_style"
        app:backgroundTint="?attr/colorPrimary"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="@dimen/fab_cradle_margin"
        app:fabCradleRoundedCornerRadius="@dimen/fab_cradle_rounded_corner_radius"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/fab_style"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="#FFFFFF"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>